fix style in class lesson align-content Flexbox

--- a/IDM Intro - HTML and CSS/class-lessons/flexbox/align-content/css/style.css
+++ b/IDM Intro - HTML and CSS/class-lessons/flexbox/align-content/css/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 #container-flex {
+    font-size: 400%;
     display: flex;
     background-color: black;
     border: 2px solid black;
